--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "btn04",
+  "name": "btn05",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,11 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.2",
+    "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "fs": "0.0.1-security",
-    "mongoose": "^5.0.17",
+    "mongoose": "^5.1.2",
+    "multer": "^1.3.0",
     "nodejs": "0.0.0"
   }
 }
