--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "mongoose": "^5.1.2",
     "multer": "^1.3.0",
-    "nodejs": "0.0.0"
+    "nodejs": "0.0.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1"
   }
 }
