--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "multer": "^1.3.0",
     "nodejs": "0.0.0",
     "passport": "^0.4.0",
+    "passport-cookie": "^1.0.6",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1"
   }
